# popup_dictionary

./: .gitignore  CHANGELOG.md  Cargo.toml  flake.nix
src/: app.rs  font_helper.rs  lib.rs  main.rs  plugin.rs  tesseract.rs  tray.rs  window_helper.rs
src/plugins/jotoba_plugin/: jotoba_plugin.rs  jotoba_tokenizer.rs
src/plugins/kihon_plugin/: dependencies.rs  jmdict_dictionary.rs  kihon_plugin.rs
