[package]
name = "popup_dictionary"
version = "0.1.1"
edition = "2024"
description = "Japanese popup dictionary as a native window"
readme = "README.md"
repository = "https://github.com/jasmine-blush/popup_dictionary"
license = "GNU General Public License v3.0"

[dependencies]
log = "0.4.28"
env_logger = "0.11.8"
eframe = "0.33.0"
egui = "0.33.0"
curl = "0.4.49"
serde_json = "1.0.145"
serde = { version = "1.0.228", features = ["derive"] }
vibrato = "0.5.2"
sled = "0.34.7"
bincode = "2.0.1"
dirs = "6.0.0"
phf = { version = "0.13.1", features = ["macros"] }
aho-corasick = "1.1.4"
clap = { version = "4.5.53", features = ["derive"] }
enigo = "0.6.1"
hyprland = { version = "0.4.0-beta.3", optional = true }
arboard = "3.6.1"
x11rb = "0.13.2"
image = "0.25.9"
tokio = "1.49.0"
regex = "1.12.2"
# dependency downloading
reqwest = { version = "0.13.1", features = ["blocking"] }
xz2 = { version = "0.1.7", features = ["static"] }
tar = "0.4.44"
zstd = "0.13.3"
flate2 = "1.1.9"

[target.'cfg(unix)'.dependencies]
ksni = "0.3.3"

[target.'cfg(windows)'.dependencies]
tray-icon = "0.21.3"
windows-sys = { version = "0.61.2", features = [
  "Win32_UI_WindowsAndMessaging",
  "Win32_System_Console",
] }

[features]
default = []
wayland-support = ["enigo/wayland", "arboard/wayland-data-control"]
hyprland-support = ["dep:hyprland", "wayland-support"]
